--- a/lab7 FSM_Counter/exp 14 Sequence Detector FSM/exp 14 Sequence Detector FSM.runs/impl_1/usage_statistics_webtalk.html
+++ b/lab7 FSM_Counter/exp 14 Sequence Detector FSM/exp 14 Sequence Detector FSM.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Nov  7 21:48:56 2018</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Nov  8 12:13:05 2018</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>1b16f362b7c44deebdb5d1aa8d3a9311</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>7</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>9</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>a7defee5-2c7e-448d-ba11-b88575f0fcc9</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>a7defee5-2c7e-448d-ba11-b88575f0fcc9</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -35,59 +35,63 @@
    <TD>addsrcwizard_specify_or_create_constraint_files=2</TD>
    <TD>basedialog_cancel=2</TD>
    <TD>basedialog_no=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=37</TD>
-   <TD>basedialog_yes=27</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=41</TD>
+   <TD>basedialog_yes=29</TD>
+   <TD>cmdmsgdialog_ok=1</TD>
    <TD>constraintschooserpanel_add_files=2</TD>
-   <TD>createsrcfiledialog_file_name=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=98</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=37</TD>
+</TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_name=2</TD>
+   <TD>filesetpanel_file_set_panel_tree=119</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=42</TD>
    <TD>fpgachooser_fpga_table=1</TD>
-   <TD>hardwaretreepanel_hardware_tree_table=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchpanel_dont_show_this_dialog_again=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hardwaretreepanel_hardware_tree_table=1</TD>
+   <TD>launchpanel_dont_show_this_dialog_again=1</TD>
    <TD>mainmenumgr_file=8</TD>
    <TD>mainmenumgr_open_recent_project=2</TD>
-   <TD>mainmenumgr_project=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=17</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=5</TD>
+   <TD>msgtreepanel_message_view_tree=53</TD>
    <TD>msgview_critical_warnings=6</TD>
    <TD>msgview_error_messages=7</TD>
-   <TD>msgview_information_messages=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_warning_messages=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_information_messages=4</TD>
+   <TD>msgview_warning_messages=7</TD>
    <TD>pacommandnames_add_sources=6</TD>
-   <TD>pacommandnames_auto_connect_target=8</TD>
-   <TD>pacommandnames_auto_update_hier=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_new_project=1</TD>
-   <TD>pacommandnames_open_hardware_manager=2</TD>
+   <TD>pacommandnames_auto_connect_target=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=12</TD>
+   <TD>pacommandnames_new_project=1</TD>
+   <TD>pacommandnames_open_hardware_manager=3</TD>
    <TD>pacommandnames_set_as_top=2</TD>
-   <TD>programdebugtab_open_target=8</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=6</TD>
-   <TD>programfpgadialog_program=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_code=1</TD>
+   <TD>paviews_schematic=1</TD>
+   <TD>programdebugtab_open_target=12</TD>
+   <TD>programdebugtab_program_device=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=8</TD>
    <TD>projectnamechooser_project_name=1</TD>
    <TD>rdicommands_delete=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=4</TD>
-   <TD>srcchooserpanel_create_file=3</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_create_file=3</TD>
    <TD>srcmenu_ip_hierarchy=11</TD>
    <TD>statemonitor_reset_step=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=1</TD>
-   <TD>syntheticastatemonitor_cancel=3</TD>
+   <TD>syntheticagettingstartedview_recent_projects=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=6</TD>
-   <TD>autoconnecttarget=7</TD>
+   <TD>autoconnecttarget=11</TD>
    <TD>editdelete=1</TD>
-   <TD>launchprogramfpga=6</TD>
+   <TD>launchprogramfpga=8</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=4</TD>
-   <TD>runbitgen=29</TD>
+   <TD>openhardwaremanager=5</TD>
+   <TD>runbitgen=31</TD>
    <TD>runimplementation=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runsynthesis=4</TD>
    <TD>settopnode=2</TD>
    <TD>showview=8</TD>
-   <TD>viewtaskprojectmanager=2</TD>
+   <TD>viewtaskprojectmanager=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=6</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -133,9 +137,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=8</TD>
     <TD>lut1=2</TD>
     <TD>lut2=6</TD>
-    <TD>lut3=15</TD>
+    <TD>lut3=14</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4=19</TD>
-    <TD>lut5=9</TD>
+    <TD>lut5=10</TD>
     <TD>lut6=3</TD>
     <TD>obuf=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcc=5</TD>
@@ -151,9 +155,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=8</TD>
     <TD>lut1=2</TD>
     <TD>lut2=6</TD>
-    <TD>lut3=15</TD>
+    <TD>lut3=14</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4=19</TD>
-    <TD>lut5=9</TD>
+    <TD>lut5=10</TD>
     <TD>lut6=3</TD>
     <TD>obuf=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcc=5</TD>
@@ -252,7 +256,7 @@
     <TD>devstatic=0.071785</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.039990</TD>
+    <TD>dynamic=0.040068</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
@@ -262,7 +266,7 @@
     <TD>i/o=0.037984</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.6 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000445</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000521</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -273,7 +277,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.111774</TD>
+    <TD>on-chip_power=0.111853</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
@@ -287,7 +291,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000784</TD>
+    <TD>signals=0.000787</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -316,9 +320,9 @@
     <TD>vccbram_static_current=0.000162</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.002098</TD>
+    <TD>vccint_dynamic_current=0.002177</TD>
     <TD>vccint_static_current=0.009606</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.011704</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.011783</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -467,11 +471,11 @@
     <TD>lut2_functional_category=LUT</TD>
     <TD>lut2_used=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=15</TD>
+    <TD>lut3_used=14</TD>
     <TD>lut4_functional_category=LUT</TD>
     <TD>lut4_used=19</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=9</TD>
+    <TD>lut5_used=10</TD>
     <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
@@ -514,7 +518,7 @@
     <TD>slice_registers_used=78</TD>
     <TD>slice_registers_util_percentage=0.19</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.19</TD>
-    <TD>fully_used_lut_ff_pairs_used=5</TD>
+    <TD>fully_used_lut_ff_pairs_used=4</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
@@ -528,23 +532,23 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=3</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=2</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=8</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=3</TD>
     <TD>lut_flip_flop_pairs_available=20800</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=9</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=0.04</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=12</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=0.06</TD>
     <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=35</TD>
-    <TD>slice_util_percentage=0.43</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=37</TD>
+    <TD>slice_util_percentage=0.45</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=17</TD>
+    <TD>slicel_used=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=18</TD>
-    <TD>unique_control_sets_used=6</TD>
-    <TD>using_o5_and_o6_fixed=6</TD>
+    <TD>slicem_used=19</TD>
+    <TD>unique_control_sets_used=5</TD>
+    <TD>using_o5_and_o6_fixed=5</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=16</TD>
     <TD>using_o5_output_only_fixed=16</TD>
     <TD>using_o5_output_only_used=0</TD>
@@ -599,25 +603,25 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=141344</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=140210</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
     <TD>bufr=0</TD>
     <TD>congestion_level=0</TD>
-    <TD>ctrls=6</TD>
+    <TD>ctrls=5</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=105774</TD>
+    <TD>estimated_expansions=106590</TD>
     <TD>ff=78</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=1</TD>
     <TD>high_fanout_nets=0</TD>
     <TD>iob=26</TD>
-    <TD>lut=49</TD>
+    <TD>lut=50</TD>
 </TR><TR ALIGN='LEFT'>    <TD>movable_instances=185</TD>
     <TD>nets=253</TD>
-    <TD>pins=994</TD>
+    <TD>pins=996</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -670,10 +674,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:25s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:39s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=508.801MB</TD>
-    <TD>memory_peak=756.082MB</TD>
+    <TD>memory_gain=514.207MB</TD>
+    <TD>memory_peak=762.203MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
